fixes the problem about the search bar getting cut off when not in full screen mode

--- a/web/src/components/Home/Home.scss
+++ b/web/src/components/Home/Home.scss
@@ -42,9 +42,7 @@
   }
 
   .app-container{
-    position: absolute;
-    float: right;
-    top: 28px;
+    padding-top: 10px;
     right: 1019px;
     #searchTB {
        width: 200px;
